release: promote RelicPrison 1.0.0